--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.mvc.view.suffix: .jsp
 # ===============================
 
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto2?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto2trello?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=Admin1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
@@ -22,6 +22,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
